sequential/flood/err.txt
../../include/utils.cpp:144:28: error: redefinition of ‘std::vector<maxtree_node*> get_neighbours(maxtree_node*, std::vector<maxtree_node*>*, unsigned int, unsigned int)’
  144 | std::vector<maxtree_node*> get_neighbours(maxtree_node *pixel,
      |                            ^~~~~~~~~~~~~~
../../include/utils.cpp:93:28: note: ‘std::vector<maxtree_node*> get_neighbours(maxtree_node*, std::vector<maxtree_node*>*, unsigned int, unsigned int)’ previously defined here
   93 | std::vector<maxtree_node*> get_neighbours(maxtree_node *pixel,
      |                            ^~~~~~~~~~~~~~
../../include/utils.cpp:170:15: error: redefinition of ‘maxtree_node* min_gval(std::vector<maxtree_node*>*)’
  170 | maxtree_node *min_gval(std::vector<maxtree_node*> *t){
      |               ^~~~~~~~
../../include/utils.cpp:119:15: note: ‘maxtree_node* min_gval(std::vector<maxtree_node*>*)’ previously defined here
  119 | maxtree_node *min_gval(std::vector<maxtree_node*> *t){
      |               ^~~~~~~~
../../include/utils.cpp:183:6: error: redefinition of ‘void print_pq(std::priority_queue<maxtree_node*>)’
  183 | void print_pq(std::priority_queue<maxtree_node*> pq){
      |      ^~~~~~~~
../../include/utils.cpp:132:6: note: ‘void print_pq(std::priority_queue<maxtree_node*>)’ previously defined here
  132 | void print_pq(std::priority_queue<maxtree_node*> pq){
      |      ^~~~~~~~
../../include/utils.cpp:194:28: error: redefinition of ‘std::vector<maxtree_node*> get_neighbours(maxtree_node*, std::vector<maxtree_node*>*, unsigned int, unsigned int)’
  194 | std::vector<maxtree_node*> get_neighbours(maxtree_node *pixel,
      |                            ^~~~~~~~~~~~~~
../../include/utils.cpp:93:28: note: ‘std::vector<maxtree_node*> get_neighbours(maxtree_node*, std::vector<maxtree_node*>*, unsigned int, unsigned int)’ previously defined here
   93 | std::vector<maxtree_node*> get_neighbours(maxtree_node *pixel,
      |                            ^~~~~~~~~~~~~~
../../include/utils.cpp:220:15: error: redefinition of ‘maxtree_node* min_gval(std::vector<maxtree_node*>*)’
  220 | maxtree_node *min_gval(std::vector<maxtree_node*> *t){
      |               ^~~~~~~~
../../include/utils.cpp:119:15: note: ‘maxtree_node* min_gval(std::vector<maxtree_node*>*)’ previously defined here
  119 | maxtree_node *min_gval(std::vector<maxtree_node*> *t){
      |               ^~~~~~~~
../../include/utils.cpp:233:6: error: redefinition of ‘void print_pq(std::priority_queue<maxtree_node*>)’
  233 | void print_pq(std::priority_queue<maxtree_node*> pq){
      |      ^~~~~~~~
../../include/utils.cpp:132:6: note: ‘void print_pq(std::priority_queue<maxtree_node*>)’ previously defined here
  132 | void print_pq(std::priority_queue<maxtree_node*> pq){
      |      ^~~~~~~~
../../include/utils.cpp:246:28: error: redefinition of ‘std::vector<maxtree_node*> get_neighbours(maxtree_node*, std::vector<maxtree_node*>*, unsigned int, unsigned int)’
  246 | std::vector<maxtree_node*> get_neighbours(maxtree_node *pixel,
      |                            ^~~~~~~~~~~~~~
../../include/utils.cpp:93:28: note: ‘std::vector<maxtree_node*> get_neighbours(maxtree_node*, std::vector<maxtree_node*>*, unsigned int, unsigned int)’ previously defined here
   93 | std::vector<maxtree_node*> get_neighbours(maxtree_node *pixel,
      |                            ^~~~~~~~~~~~~~
../../include/utils.cpp:272:15: error: redefinition of ‘maxtree_node* min_gval(std::vector<maxtree_node*>*)’
  272 | maxtree_node *min_gval(std::vector<maxtree_node*> *t){
      |               ^~~~~~~~
../../include/utils.cpp:119:15: note: ‘maxtree_node* min_gval(std::vector<maxtree_node*>*)’ previously defined here
  119 | maxtree_node *min_gval(std::vector<maxtree_node*> *t){
      |               ^~~~~~~~
../../include/utils.cpp:285:6: error: redefinition of ‘void print_pq(std::priority_queue<maxtree_node*>)’
  285 | void print_pq(std::priority_queue<maxtree_node*> pq){
      |      ^~~~~~~~
../../include/utils.cpp:132:6: note: ‘void print_pq(std::priority_queue<maxtree_node*>)’ previously defined here
  132 | void print_pq(std::priority_queue<maxtree_node*> pq){
      |      ^~~~~~~~
make: *** [Makefile:33: utils.o] Error 1
